fixed visibility overriding

--- a/css/button.css
+++ b/css/button.css
@@ -15,7 +15,7 @@ body de_cbutton#de-cute-id {
 	width: 32px;
 }
 body de_cbutton#de-cute-id.visible {
-	visibility: visible;
+	visibility: visible !important;
 }
 body de_cbutton#de-cute-id:hover {
 	background-color: #666;
